# polybash

./: .editorconfig  .gitignore  00-START-HERE.md  AGENTS.md  Cargo.toml  MASTER_SPEC.md  README.md  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: ci.yml
codex/: 00-OVERNIGHT-RUNBOOK.md  ACCEPTANCE_SUMMARY.md  ENVIRONMENT-NOTES.md  GAP_REPORT.md  GAP_REPORT_TEMPLATE.md  RELEASE_GATE_SUMMARY.md  RELEASE_GATE_TEMPLATE.md  STANDALONE_PIVOT.md  STATUS.md  taskboard.yaml
codex/prompts/: 00-LAUNCH-STANDALONE.md  00-LAUNCH-THIS-REPO.md  00-MASTER-ORCHESTRATOR.md  01-BOOTSTRAP-AND-CONTRACTS.md  02-FIXTURES-AND-DOMAIN.md  03-VALIDATOR-AND-EXPORT.md  04-CLI.md  05-PLUGIN-SHELL.md  06-PLUGIN-WORKFLOWS.md  07-ACCEPTANCE-AND-CI.md  08-GAP-REPORT-AND-HANDOFF.md  09-24H-AUTONOMOUS-RUNLOOP.md  10-LAUNCH-UNATTENDED-PRODUCT-RUN.md
crates/polybash-cli/: Cargo.toml
crates/polybash-cli/src/: main.rs
crates/polybash-cli/tests/: cli_export.rs  cli_validate.rs
crates/polybash-contracts/: Cargo.toml
crates/polybash-domain/: Cargo.toml
crates/polybash-export/: Cargo.toml
crates/polybash-llm/: Cargo.toml
crates/polybash-ops/: Cargo.toml
crates/polybash-validate/: Cargo.toml
crates/polybash-wasm/: Cargo.toml
crates/polybash-wasm/src/: lib.rs
crates/polybash-wasm/tests/: bridge_parity.rs
desktop/: index.html  package.json  tsconfig.json
desktop/src/: desktopAcceptance.spec.ts  documentInspector.spec.ts  documentInspector.ts  documentPaths.spec.ts  documentPaths.ts  historyState.spec.ts  historyState.ts  main.ts  materialPreviewState.spec.ts  materialPreviewState.ts  moduleDraft.spec.ts  moduleDraft.ts  moduleDraftForm.spec.ts  moduleDraftForm.ts  sceneProjection.spec.ts  sceneProjection.ts  styles.css  three-env.d.ts  types.ts  viewportController.spec.ts  viewportController.ts
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: main-dialog.json
desktop/src-tauri/src/: lib.rs  main.rs
docs/: 01-PRD.md  02-TECHNICAL-ARCHITECTURE.md  03-WBS-AND-MILESTONES.md  04-TDD-QUALITY-GATES.md  05-ACCEPTANCE-TEST-MATRIX.md  06-RISK-REGISTER.md  07-REPO-BLUEPRINT.md  08-CODEX-LAUNCH-GUIDE.md  09-BLENDER-HANDOFF-CONTRACT.md
examples/: README.md
fixtures/: README.md
plugin/: esbuild.config.mjs  package.json  tsconfig.json  vitest.config.ts
plugin/src/: index.ts  (+1 more)
(+64 files in other folders)
