[package]
name = "polybash-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
polybash-contracts = { path = "../polybash-contracts" }
polybash-export = { path = "../polybash-export" }
polybash-validate = { path = "../polybash-validate" }
base64 = "0.22"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[lib]
crate-type = ["cdylib", "rlib"]
